Dat was missing

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             console.log("+ Creating lightbox for " + reference.name);
             $( ".lightboxes" ).append(
               "<lightbox id='" + reference.id +
-              "'<h2>" + reference.name + "</h2><p>" + reference.longtext +
+              "'><h2>" + reference.name + "</h2><p>" + reference.longtext +
               "</p><a onclick='document.getElementById(\"" + reference.id +
               "\").style.display=\"none\";'>close</a></lightbox>" );
           }
