--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             $( ".lightboxes" ).append(
               "<lightbox id='" + reference.id +
               "'><h2>" + reference.name + "</h2><p>" + reference.longtext +
-              "</p><a href='' onclick='document.getElementById(\"" + reference.id +
+              "</p><a href='#aaa' onclick='document.getElementById(\"" + reference.id +
               "\").style.display=\"none\";'>close</a></lightbox>" );
           }
         }
