--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
             $( ".lightboxes" ).append(
               "<lightbox id='" + reference.id +
               "'><h2>" + reference.name + "</h2><p>" + reference.longtext +
-              "</p><a href='#aaa' onclick='document.getElementById(\"" + reference.id +
-              "\").style.display=\"none\";'>close</a></lightbox>" );
+              "</p><a href='#aaa'>close</a></lightbox>" );
           }
         }
         console.log("#####################################");
