--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           if (reference.era == "") {
             if (reference.lightbox == "yes") {
               console.log("There's a lightbox link here");
-              lightboxHTML = "<a href='#" + reference.id + "'>link</a>";
+              lightboxHTML = " <a href='#" + reference.id + "'>read more →</a>";
             }
             else {
               lightboxHTML = "";
