Outboud links open in a new window

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             }
             else if (reference.url != "") {
               console.log("There's a url link here");
-              lightboxHTML = " <a href='" + reference.url + "'>Read more →</a>";
+              lightboxHTML = " <a target='_blank' href='" + reference.url + "'>Read more →</a>";
             }
             else {
               lightboxHTML = "";
