--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="https://medium.com/@hoffergabor" target="_blank">Medium</a> —
         <a href="https://twitter.com/@hoffergabor" target="_blank">Twitter</a> —
         <a href="mailto:hoffergabor@gmail.com" target="_blank">Email</a></h3>
-    <p>TLDR;<br />I'm a designer/manager with 10+ years of experience.<br />My passion is to enable people to solve problems.</p>
+    <p><br /><br /><br />I'm a designer/manager with 10+ years of experience.<br />My passion is to enable people to solve problems.</p>
   </header>
 
   <timeline>
