--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
 
   <footer style="top: 2650vh;">
     <h2>Well, you actually scrolled down here... Nice!</h2>
-    <h3>I made this website myself with the help of Atom, JQuery, HTMl, LESS, Tabletop.js and GitHub.</h3>
+    <h3>I made this website myself with the help of
+      <a href="https://atom.io/" target"_blank">Atom</a>,
+      <a href="https://jquery.com/" target"_blank">JQuery</a>,
+      <a href="https://www.w3schools.com/html/" target"_blank">HTMl</a>,
+      <a href="http://lesscss.org/" target"_blank">LESS</a>,
+      <a href="https://github.com/jsoma/tabletop" target"_blank">Tabletop.js</a> and
+      <a href="https://github.com/" target"_blank">GitHub</a>.</h3>
   </footer>
 
   <script type="text/javascript">
