--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             }
             $( "." + reference.year ).append(
               "<reference class='offset-" + reference.month +
+              " important-" + reference.importance +
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
               "'><date>" + reference.date +
